--- a/netlify.toml
+++ b/netlify.toml
@@ -8,5 +8,11 @@
   status = 200
   force = true
 
+# SPA fallback - risolve il problema 404 per le route Angular
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
 [build.environment]
   NODE_VERSION = "18"
