--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
         "daisyui"
-    ]
+    ],
+    "postman.settings.dotenv-detection-notification-visibility": false
 }
